--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-axios": "^0.17.1",
+    "react-native-gesture-handler": "^2.22.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
+    "react-native-svg": "^15.11.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
