--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "^2.22.0",
     "react-native-reanimated": "^3.16.7",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-svg": "^15.11.1",
