--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "5",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -17,6 +18,7 @@
     "react-native": "0.76.6",
     "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "^2.22.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "^3.16.7",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.1.0",
