--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-svg": "^15.11.1",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
