--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "^2.22.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.1.0",
