--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.0.6",
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-native-firebase/app": "^21.7.1",
     "@react-native-firebase/auth": "^21.7.1",
     "@react-native-firebase/firestore": "^21.7.1",
@@ -22,14 +23,18 @@
     "react-native": "0.76.6",
     "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "^2.22.1",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-gifted-chat": "^2.6.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.13.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^5.1.0",
+    "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.5.0",
     "react-native-svg": "^15.11.1",
     "react-native-swipe-list-view": "^3.2.9",
+    "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
